{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 38,
  "lineage": "cdae2304-4da0-da44-2f2d-cf2a66ec58fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ipelastica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c1372f0bc0d02fa",
            "arn": "arn:aws:ec2:us-east-1:654654423131:elastic-ip/eipalloc-04c1372f0bc0d02fa",
            "association_id": "eipassoc-0e1f601c27561348c",
            "domain": "vpc",
            "id": "eipalloc-04c1372f0bc0d02fa",
            "instance": "i-0cde4d91ac98635b8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e18a220fcc44040",
            "private_dns": "ip-172-31-94-116.ec2.internal",
            "private_ip": "172.31.94.116",
            "public_dns": "ec2-98-90-139-59.compute-1.amazonaws.com",
            "public_ip": "98.90.139.59",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "ip elastica"
            },
            "tags_all": {
              "Name": "ip elastica"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.webserver",
            "aws_security_group.all",
            "aws_security_group.http",
            "aws_security_group.http2",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0e3a97c8b4807eeba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3a97c8b4807eeba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d55cd04e5124048c"
              }
            ],
            "primary_network_interface_id": "eni-0d55cd04e5124048c",
            "private_dns": "ip-172-31-16-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.142",
            "public_dns": "ec2-52-90-250-15.compute-1.amazonaws.com",
            "public_ip": "52.90.250.15",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2d6698d170cb133",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "all-examen",
              "ssh-examen-bastion"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ec3a5f514b862b1",
              "sg-0a47cbc7d7937c676"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0e3a97c8b4807eeba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all",
            "aws_security_group.bastionssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0cde4d91ac98635b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cde4d91ac98635b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05e18a220fcc44040"
              }
            ],
            "primary_network_interface_id": "eni-05e18a220fcc44040",
            "private_dns": "ip-172-31-94-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.116",
            "public_dns": "ec2-18-208-144-155.compute-1.amazonaws.com",
            "public_ip": "18.208.144.155",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04aadf73f3b0ec4fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "all-examen",
              "http-examen",
              "http2-examen",
              "ssh-examen"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03fb78a269c6281bb",
            "tags": {
              "Name": "webServer"
            },
            "tags_all": {
              "Name": "webServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0575c12933484df52",
              "sg-09d0abca07fda7cca",
              "sg-0a47cbc7d7937c676",
              "sg-0f3f41954432d5e91"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0cde4d91ac98635b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all",
            "aws_security_group.http",
            "aws_security_group.http2",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-0a47cbc7d7937c676",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a47cbc7d7937c676",
            "ingress": [],
            "name": "all-examen",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-0a47cbc7d7937c676",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-03ec3a5f514b862b1",
            "description": "Allow SSH traffic in Bastion",
            "egress": [],
            "id": "sg-03ec3a5f514b862b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-examen-bastion",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-03ec3a5f514b862b1",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-0575c12933484df52",
            "description": "Allow HTTP traffic",
            "egress": [],
            "id": "sg-0575c12933484df52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-examen",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-0575c12933484df52",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-0f3f41954432d5e91",
            "description": "Allow traffic in 8008",
            "egress": [],
            "id": "sg-0f3f41954432d5e91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8008,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8008
              }
            ],
            "name": "http2-examen",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-0f3f41954432d5e91",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-09d0abca07fda7cca",
            "description": "Allow SSH traffic in Web Server from Bastion only",
            "egress": [],
            "id": "sg-09d0abca07fda7cca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ec3a5f514b862b1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-examen",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-09d0abca07fda7cca",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-07dbace3e68777a51",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07dbace3e68777a51",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a47cbc7d7937c676",
            "security_group_rule_id": "sgr-07dbace3e68777a51",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-07dbace3e68777a51",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0db44c1468aef103d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0db44c1468aef103d",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0575c12933484df52",
            "security_group_rule_id": "sgr-0db44c1468aef103d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0db44c1468aef103d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-071f667c41ec105a7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8008,
            "id": "sgr-071f667c41ec105a7",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f3f41954432d5e91",
            "security_group_rule_id": "sgr-071f667c41ec105a7",
            "tags": null,
            "tags_all": {},
            "to_port": 8008
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-071f667c41ec105a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.http2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-09f7d2511343792d2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09f7d2511343792d2",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03ec3a5f514b862b1",
            "region": "us-east-1",
            "security_group_id": "sg-09d0abca07fda7cca",
            "security_group_rule_id": "sgr-09f7d2511343792d2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-09f7d2511343792d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastionssh",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sshbastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0df2d9508d34326a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0df2d9508d34326a2",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03ec3a5f514b862b1",
            "security_group_rule_id": "sgr-0df2d9508d34326a2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0df2d9508d34326a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastionssh"
          ]
        }
      ]
    }
  ]
}